gccida/g1/print_value
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/sched-vis.c:1046:13: error: use of undeclared identifier 'off_6ECBFD'
sprintf( t, off_6ECBFD); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/sched-vis.c:1052:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*( unsigned __int8 *)reg_names[rtuint]] & 4) != 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/sched-vis.c:1063:13: error: use of undeclared identifier 'off_6FAD63'
sprintf( t, off_6FAD63, *( _DWORD *)&x[1]); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/sched-vis.c:1070:40: error: use of undeclared identifier 'off_631D1E'
safe_concat( buf, v16, ( const char *)&off_631D1E + 2); 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/sched-vis.c:1073:13: error: use of undeclared identifier 'off_6ECBEC'
sprintf( t, off_6ECBEC, *( unsigned int *)( x->fld[0].rtwint + 8)); 
            ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/print_value/src/obj/sched-vis.o] Error 1
